--- a/admin.css
+++ b/admin.css
@@ -17,3 +17,14 @@ body{
     padding: 15px;
     border-right:1px solid #ddd;
 }
+
+.side h3{
+    margin-top:0;
+    margin-bottom: 13px;
+    font-size: 16px;
+
+    
+}
+.side label{
+    font-size: 12px;
+}
